--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -7,15 +7,23 @@
 // the build definitions, you can place those customizations in this file, but
 // please think carefully as to whether such customizations are really necessary
 // before doing so.
-
-
 // Custom definitions may go here
-
 // Include common definitions from above.
 apply from: '../build.common.gradle'
-apply from: '../build.dependencies.gradle'
-
+repositories {
+    maven { url = 'https://maven.brott.dev/' }
+}
 dependencies {
-    implementation project(':FtcRobotController')
-    annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.3'
+
+    /*
+     * Other Modules
+     */
+    implementation project(':FtcRobotController') {
+//        exclude group: 'org.firstinspires.ftc'
+    }
+
+    implementation 'org.apache.commons:commons-math3:3.6.1'
+    implementation 'com.acmerobotics.roadrunner:core:0.5.4'
+    implementation 'org.openftc:easyopencv:1.5.0'
 }
